test/failing/failing_access_modifier.c
class AccessTest
{
private
    {
    public
        {
            int secret;
        }
    }
public
    {
        int value;
    }
protected
    {
        int hidden;
    }
};
